# class-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ekf_2formula.m  extended_kalman_filter.m  extended_kalman_filter.m~  gt_000002.txt  nn.m  predict.m  provaspline.m  test_ll.txt  update.m
c++/: CMakeLists.txt
c++/demo/: main.cpp
c++/include/: Data.h  Tracker.h  Tracking.h  ekf.h  geodetic_conv.hpp  obj.h  plot.h
c++/src/: Data.cpp  Tracker.cpp  Tracking.cpp  ekf.cpp  ekf.h  geodetic_conv.hpp  main.cpp  matplotlibcpp.h  obj.cpp  plot.cpp  plot.h  tracker.cpp  tracker.h  trackutils.cpp  trackutils.h  utils.cpp  utils.h
data/: prova.txt  prova_pixel.txt  test.txt
demo/: main.cpp
include/: Tracker.h  Tracking.h  ekf.h  filter.h  matplotlibcpp.h  obj.h  plot.h  state.h  ukf.h
matlab/: extended_kalman_filter.m  kalman_filter.m  nn.m
src/: Tracker.cpp  Tracking.cpp  ekf.cpp  filter.cpp  obj.cpp  plot.cpp  state.cpp  ukf.cpp
